[package]
name = "exchanger"
version = "0.1.0"
authors = ["dujingbing <dujingbing_csu@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "toms-exchanger"

[dependencies]
actix-web = "1.0.5"
futures="0.1"